--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "next": "10.2.0",
+    "next-routes": "^1.4.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
